[gd_scene load_steps=4 format=3 uid="uid://cn54gmrsc2eq6"]

[ext_resource type="Script" path="res://scripts/mobile_buttons.gd" id="1_2yvc7"]
[ext_resource type="Texture2D" uid="uid://c5qew1gdkmknv" path="res://assets/buttons/UI_Flat_Button_Small_Press_02a1.png" id="2_sfjlr"]
[ext_resource type="Texture2D" uid="uid://0kx2d5fa4qlb" path="res://assets/buttons/UI_Flat_Button_Small_Press_02a3.png" id="3_vgbmd"]

[node name="MobileButtons" type="CanvasLayer"]
script = ExtResource("1_2yvc7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Left" type="TouchScreenButton" parent="Control"]
modulate = Color(1, 1, 1, 0.247059)
position = Vector2(53, 495)
scale = Vector2(3.375, 3.28125)
texture_normal = ExtResource("2_sfjlr")
texture_pressed = ExtResource("3_vgbmd")

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Right" type="TouchScreenButton" parent="Control2"]
modulate = Color(1, 1, 1, 0.247059)
position = Vector2(208, 495)
scale = Vector2(3.375, 3.28125)
texture_normal = ExtResource("2_sfjlr")
texture_pressed = ExtResource("3_vgbmd")

[node name="Control3" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Jump" type="TouchScreenButton" parent="Control3"]
modulate = Color(1, 1, 1, 0.247059)
position = Vector2(966, 490)
scale = Vector2(3.375, 3.28125)
texture_normal = ExtResource("2_sfjlr")
texture_pressed = ExtResource("3_vgbmd")

[connection signal="pressed" from="Control/Left" to="." method="_on_left_pressed"]
[connection signal="released" from="Control/Left" to="." method="_on_left_released"]
[connection signal="pressed" from="Control2/Right" to="." method="_on_right_pressed"]
[connection signal="released" from="Control2/Right" to="." method="_on_right_released"]
[connection signal="pressed" from="Control3/Jump" to="." method="_on_jump_pressed"]
[connection signal="released" from="Control3/Jump" to="." method="_on_jump_released"]
